merge the changes in classpath implementation from java/j2seproject module